[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "6.0.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls", "rustls"] }
